--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.15.0",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
