--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.15.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/themes": "^3.1.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
@@ -19,6 +20,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
